make the AI smarter to not shoot at places it knows there are no ships

When notify is called after a shoot, and an opponent ship is sunk,
mark the surrounding cells as border, therefore the AI will not try
them in the future.

BUG: 318594
FIXED-IN: 4.12
REVIEW: 113054